# SlidingRevenueModel

./: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/srm/: app.py
