[build-system]
requires = ["setuptools >= 72.2.0", "setuptools-scm >= 8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sliding-revenue-model"
description = "A demo web app of a sliding revenue model."
readme = "README.md"
requires-python = ">= 3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [
    {name = "Ian Thompson", email = "ianiat11@gmail.com"}
]
maintainers = [
    {name = "Ian Thompson", email = "ianiat11@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.dynamic]
version = {attr = "srm.__version__"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.isort]
profile = "black"
force_sort_within_sections = true

[tool.mypy]
warn_return_any = true
